Refactor data generation and visualization scripts for LeadingOnes and OneMax
- Removed deprecated LeadingOnesGT.py and replaced it with a new implementation in LeadingOnes/LeadingOnesGT.py.
- Introduced LeadingOnesGT_Noise.py for generating noisy ground truth data.
- Added OneMaxGT.py and OneMaxGT_Noise.py for OneMax problem data generation with noise.
- Implemented visualization scripts for both LeadingOnes and OneMax datasets, including noise handling.
- Updated .gitignore to include new directories and files.
- Enhanced shell scripts for data generation and analysis execution.
- Created README and analysis report files for better documentation and usability.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,27 @@
 # Ignore contents of data directories but keep the directories themselves
 DataSets/Ground_Truth/*
 DataSets/Ground_Truth_Noise/*
-
+thesis/
 # Keep the directories themselves (empty .gitkeep files)
 !DataSets/Ground_Truth/.gitkeep
 !DataSets/Ground_Truth_Noise/.gitkeep
 
+# Keep LeadingOnes subdirectories but ignore their contents
+!DataSets/Ground_Truth/LeadingOnes/
+!DataSets/Ground_Truth_Noise/LeadingOnes/
+DataSets/Ground_Truth/LeadingOnes/*
+DataSets/Ground_Truth_Noise/LeadingOnes/*
+
+# Keep continuous and discrete subdirectories but ignore their contents
+!DataSets/Ground_Truth/LeadingOnes/continuous/
+!DataSets/Ground_Truth/LeadingOnes/discrete/
+!DataSets/Ground_Truth_Noise/LeadingOnes/continuous/
+!DataSets/Ground_Truth_Noise/LeadingOnes/discrete/
+DataSets/Ground_Truth/LeadingOnes/continuous/*
+DataSets/Ground_Truth/LeadingOnes/discrete/*
+DataSets/Ground_Truth_Noise/LeadingOnes/continuous/*
+DataSets/Ground_Truth_Noise/LeadingOnes/discrete/*
+SR_algorithms/Q_Lattice/venv
 # Python
 __pycache__/
 *.py[cod]
@@ -46,3 +62,4 @@ venv.bak/
 # OS
 .DS_Store
 Thumbs.db
+
