Add minimal library configurations and evaluation scripts for symbolic regression
- Updated `.gitignore` to exclude output directories for PySR.
- Introduced `minimal_library_experiment.md` to document the evaluation of symbolic regression algorithms using minimal function libraries.
- Added `compare_experiments.py` script for comparing results between full and minimal library configurations.
- Created new evaluation scripts for tailored library evaluations, including `evaluate_control_library.sh`, `evaluate_tailored_library.sh`, and `evaluate_rounding.sh`.
- Implemented data generation scripts for OneMax, LeadingOnes, and PSA-CMA-ES datasets with minimal libraries.
- Enhanced existing scripts to support minimal library configurations and updated experiment descriptions accordingly.

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ DataSets/Ground_Truth/LeadingOnes/discrete/*
 DataSets/Ground_Truth_Noise/LeadingOnes/continuous/*
 DataSets/Ground_Truth_Noise/LeadingOnes/discrete/*
 SR_algorithms/Q_Lattice/venv
+SR_algorithms/PySR/outputs/
 # Python
 __pycache__/
 *.py[cod]
