Update .gitignore, remove unused files, and enhance analysis scripts
- Updated .gitignore to ignore all Experiment directories and their contents.
- Deleted unused config.json and various experiment-related files to clean up the repository.
- Added new analysis scripts for LeadingOnes and OneMax, including `analyze_leadingones.py` and `analyze_onemax.py`.
- Introduced a new analysis system with README documentation and requirements for symbolic regression results.
- Enhanced existing scripts for better organization and clarity in data generation and analysis processes.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,10 @@ Experiments/*/Datasets/**
 Experiments/Experiment1/Datasets/
 Experiments/Experiment1/Datasets/**
 
+# Ignore all Experiment directories and their contents
+Experiments/
+Experiments/**
+
 # Python
 __pycache__/
 *.py[cod]
