Remove deprecated configuration files and enhance experiment runner
- Deleted obsolete configuration files: `config_template.json`, `example_experiment1_config.json`, `test_control_config.json`, `test_library_config.json`, and others to streamline the repository.
- Updated `experiment_runner.py` to include functionality for copying the `run.sh` script to experiment directories, facilitating parallel execution.
- Introduced `global_TODO.txt` to consolidate evaluation commands for all experiments, improving organization and clarity.
- Added `master_experiment_runner.py` to orchestrate multiple experiments and manage configurations more effectively.
- Created `README_experiment_organization.md` to document the new structured approach for managing experiments.

--- a/setup_environments/generation_environment.yml
+++ b/setup_environments/generation_environment.yml
@@ -26,6 +26,7 @@ dependencies:
   - pip:
       - DACBench==0.3.0
       - gymnasium==0.29.1
+      - ioh>=0.3.0
       - fsspec==2025.7.0
       - Farama-Notifications==0.0.4
       - stable_baselines3==2.6.0
