Enhance experiment setup for LeadingOnes data generation
- Introduced a new method for generating LeadingOnes data using a DeepRL model, allowing for more sophisticated data generation with expected noise levels.
- Updated the experiment runner to handle DeepRL-specific configurations and data generation paths.
- Added functionality to include noisy parameters in data generation for both LeadingOnes and OneMax benchmarks.
- Updated global TODO files to reflect new experiment configurations and improved organization for upcoming experiments.

--- a/setup_environments/generation_environment.yml
+++ b/setup_environments/generation_environment.yml
@@ -29,4 +29,7 @@ dependencies:
       - ioh>=0.3.0
       - fsspec==2025.7.0
       - Farama-Notifications==0.0.4
-      - stable_baselines3==2.6.0 
+      - stable_baselines3==2.6.0
+      - torch>=2.3,<3.0
+      - torchvision
+      - torchaudio 
